Colaboratory를 통해 생성됨

--- a/과제11.ipynb
+++ b/과제11.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPOlnNip1EtLKZwzt0NnIQS",
+      "authorship_tag": "ABX9TyOGZ+I5nR4VSUiNPnOc/eAm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,6 +121,34 @@
           "name": "stdout",
           "text": [
             "오늘의 명언 ==> ['중요한 것은 꺽이지 않는 마음이다']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import datetime\n",
+        "\n",
+        "now= datetime.date.today()\n",
+        "d_day= datetime.date(2023, 11, 16)\n",
+        "d_day = d_day - now\n",
+        "print(d_day.days)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Wg4qAg_MztiB",
+        "outputId": "69ead8f1-fbb3-42fa-e252-69e1496646ee"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "220\n"
           ]
         }
       ]
